--- a/package.json
+++ b/package.json
@@ -1,13 +1,17 @@
 {
   "name": "nextjs-antd-breadcrumbs",
-  "private": true,
+  "source": "src/index.tsx",
+  "main": "dist/index.js",
+  "module": "dist/index.modern.js",
+  "unpkg": "dist/index.umd.js",
   "scripts": {
     "dev": "next dev",
-    "build": "next build",
+    "build": "microbundle-crl  --no-compress --css-modules null --format modern,cjs,umd",
     "start": "next start",
     "lint": "next lint"
   },
   "dependencies": {
+    "antd": "4.17.3",
     "next": "12.0.7",
     "react": "17.0.2",
     "react-dom": "17.0.2"
@@ -17,6 +21,7 @@
     "@types/react": "17.0.37",
     "eslint": "8.4.1",
     "eslint-config-next": "12.0.7",
+    "microbundle-crl": "^0.13.11",
     "typescript": "4.5.4"
   }
 }
