--- a/package.json
+++ b/package.json
@@ -8,7 +8,17 @@
     "dev": "next dev",
     "build": "microbundle-crl  --no-compress --css-modules null --format modern,cjs,umd",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "commit": "git cz",
+    "release-it": "standard-version"
+  },
+  "config": {
+    "commitizen": {
+      "path": "cz-customizable"
+    }
+  },
+  "gitHooks": {
+    "commit-msg": "commitlint -e -V"
   },
   "dependencies": {
     "antd": "4.17.3",
@@ -17,11 +27,17 @@
     "react-dom": "17.0.2"
   },
   "devDependencies": {
+    "@commitlint/cli": "^15.0.0",
     "@types/node": "16.11.13",
     "@types/react": "17.0.37",
+    "commitizen": "^4.2.4",
+    "commitlint-config-cz": "^0.13.2",
+    "cz-customizable": "^6.3.0",
     "eslint": "8.4.1",
     "eslint-config-next": "12.0.7",
     "microbundle-crl": "^0.13.11",
-    "typescript": "4.5.4"
+    "standard-version": "^9.3.2",
+    "typescript": "4.5.4",
+    "yorkie": "^2.0.0"
   }
 }
