--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "nextjs-antd-breadcrumbs",
+  "version": "1.0.0",
   "source": "src/index.tsx",
   "main": "dist/index.js",
   "module": "dist/index.modern.js",
