--- a/package.json
+++ b/package.json
@@ -5,9 +5,11 @@
   "main": "dist/index.js",
   "module": "dist/index.modern.js",
   "unpkg": "dist/index.umd.js",
+  "types": "dist/index.d.ts",
+  "files": ["dist"],
   "scripts": {
     "dev": "next dev",
-    "build": "microbundle-crl  --no-compress --css-modules null --format modern,cjs,umd",
+    "build": "microbundle-crl --no-compress --css-modules null --format modern,cjs,umd --tsconfig tsconfig.build.json",
     "start": "next start",
     "lint": "next lint",
     "commit": "git cz",
