--- a/package.json
+++ b/package.json
@@ -1,12 +1,14 @@
 {
   "name": "nextjs-antd-breadcrumbs",
-  "version": "1.0.2",
+  "version": "1.1.0",
   "source": "src/index.tsx",
   "main": "dist/index.js",
   "module": "dist/index.modern.js",
   "unpkg": "dist/index.umd.js",
   "types": "dist/index.d.ts",
-  "files": ["dist"],
+  "files": [
+    "dist"
+  ],
   "scripts": {
     "dev": "next dev",
     "build": "microbundle-crl --no-compress --css-modules null --format modern,cjs,umd --tsconfig tsconfig.build.json",
