--- a/package.json
+++ b/package.json
@@ -9,6 +9,20 @@
   "files": [
     "dist"
   ],
+  "license": "MIT",
+  "author": "luozhu",
+  "publishConfig": {
+    "access": "public",
+    "registry": "https://registry.npmjs.org/"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/youngjuning/nextjs-antd-breadcrumbs.git"
+  },
+  "bugs": {
+    "url": "https://github.com/youngjuning/nextjs-antd-breadcrumbs/issues"
+  },
+  "homepage": "https://github.com/youngjuning/nextjs-antd-breadcrumbs#readme",
   "scripts": {
     "dev": "next dev",
     "build": "microbundle-crl --no-compress --css-modules null --format modern,cjs,umd --tsconfig tsconfig.build.json",
